# tdd-scalable-fastapi

./: .gitlab-ci.yml  README.md
ci_cd/python/: Dockerfile
services/app/: pyproject.toml
