[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["mariacamilahdezo <mariacamilahdezo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
